fix(*): adding min-width for grids to ensure proper rendering on mobile

--- a/projects/fleet-management-grid/src/app/components/fleet-management-grid/fleet-management-grid.scss
+++ b/projects/fleet-management-grid/src/app/components/fleet-management-grid/fleet-management-grid.scss
@@ -7,6 +7,7 @@
   align-items: stretch;
   align-content: flex-start;
   height: 100%;
+  min-width: 1100px;
 }
 
 .grid {
