--- a/projects/sales-grid/src/app/sales-grid/sales-grid.scss
+++ b/projects/sales-grid/src/app/sales-grid/sales-grid.scss
@@ -9,6 +9,7 @@
   flex-direction: column;
   width: 100%;
   height: 100%;
+  min-width: 1100px;
   --ig-size: var(--ig-size-small);
 }
 
